name: NTRU
version: 1.0.0.1
license: GPL
license-file: LICENSE
copyright: 2014, CyberPoint International, LLC
maintainer: opensource@cyberpointllc.com
author: Theo Levine, Tom Cornelius, Elizabeth Hughes, CyberPoint International LLC.
synopsis: NTRU Cryptography
description:
  A Haskell implementation of the NTRU cryptographic system, following the IEEE Standard Specification for Public Key Crpytographic Techniques Based on Hard Problems over Lattices (IEEE Std 1363.1-2008)
category: Cryptography, Math
build-type: Simple
cabal-version: >=1.8
extra-source-files:
  README.md
  examples/sampleGeneralNTRU.hs
  examples/sampleSpecificNTRU.hs

library
  exposed-modules:
    Math.NTRU
    Math.NTRU.EES401EP1
    Math.NTRU.EES449EP1
    Math.NTRU.EES677EP1
    Math.NTRU.EES1087EP2
    Math.NTRU.EES541EP1
    Math.NTRU.EES613EP1
    Math.NTRU.EES887EP1
    Math.NTRU.EES1171EP1
    Math.NTRU.EES659EP1
    Math.NTRU.EES761EP1
    Math.NTRU.EES1087EP1
    Math.NTRU.EES1499EP1
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
    base >=4.6,
    SHA >=1.6,
    split >=0.2,
    containers >=0.5,
    crypto-api >=0.13,
    random >=1.1,
    polynomial >=0.7,
    arithmoi >=0.4,
    bytestring >=0.10
